fixed image distortion

--- a/my-react-website/src/scss/_about.scss
+++ b/my-react-website/src/scss/_about.scss
@@ -1,7 +1,10 @@
 // About page
 .aboutImg{
   width: 250px;
-  // height: 200px;
-  border-radius: 50%;
-  margin: 0 auto;
+  height: 250px;
+  border-top-left-radius: 50% 50%;
+  border-top-right-radius: 50% 50%;
+  border-bottom-right-radius: 50% 50%;
+  border-bottom-left-radius: 50% 50%;
+  object-fit: cover;
 }
